examples/ipmx/valid/01_simple_video.sdp
v=0
o=- 2000 1 IN IP4 192.168.1.1
s=IPMX Video Minimal
t=0 0
a=extmap:1 urn:ietf:params:rtp-hdrext:smpte-tc
m=video 5000 RTP/AVP 96
c=IN IP4 239.100.1.1/64
a=source-filter: incl IN IP4 239.100.1.1 192.168.1.1
a=rtpmap:96 raw/90000
a=fmtp:96 sampling=YCbCr-4:2:2; width=1920; height=1080; exactframerate=25; depth=10; TCS=SDR; colorimetry=BT709; PM=2110GPM; TP=2110TPN; SSN=ST2110-20:2017; measuredpixclk=148500000; vtotal=1125; htotal=2200; IPMX
a=mediaclk:direct=0
a=ts-refclk:ptp=IEEE1588-2008:AA-BB-CC-DD-EE-FF-00-11:0
