examples/ipmx/invalid/rtcp_mux.sdp
v=0
o=- 1234567890 1 IN IP4 192.168.1.1
s=IPMX — a=rtcp-mux present (invalid)
t=0 0
a=ts-refclk:localmac=AA-BB-CC-DD-EE-FF
m=video 5000 RTP/AVP 96
c=IN IP4 239.100.0.1/64
a=rtpmap:96 raw/90000
a=fmtp:96 sampling=YCbCr-4:2:2; width=1920; height=1080; exactframerate=25; depth=10; TCS=SDR; colorimetry=BT709; PM=2110GPM; SSN=ST2110-20:2022; TP=2110TPN; IPMX
a=mediaclk:direct=0
a=ts-refclk:localmac=AA-BB-CC-DD-EE-FF
a=extmap:1 urn:ietf:params:rtp-hdrext:smpte-tc
a=rtcp-mux
